--- a/index.html
+++ b/index.html
@@ -7643,3 +7643,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
