--- a/index.html
+++ b/index.html
@@ -7655,3 +7655,5 @@
 <!-- Enhanced user experience -->
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
