--- a/index.html
+++ b/index.html
@@ -7659,3 +7659,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
