--- a/index.html
+++ b/index.html
@@ -7667,3 +7667,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
