--- a/index.html
+++ b/index.html
@@ -7689,3 +7689,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Improved accessibility -->
+
+<!-- Better SEO optimization -->
