--- a/index.html
+++ b/index.html
@@ -7715,3 +7715,5 @@
 <meta name="description" content="Updated description">
 
 <link rel="stylesheet" href="styles.css">
+
+<!-- Better SEO optimization -->
