--- a/index.html
+++ b/index.html
@@ -7727,3 +7727,5 @@
 <script src="app.js"></script>
 
 <meta name="description" content="Updated description">
+
+<!-- Enhanced user experience -->
