--- a/index.html
+++ b/index.html
@@ -7733,3 +7733,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<!-- Improved accessibility -->
