--- a/index.html
+++ b/index.html
@@ -7729,3 +7729,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<meta name="description" content="Updated description">
