--- a/index.html
+++ b/index.html
@@ -7731,3 +7731,5 @@
 <!-- Enhanced user experience -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
