--- a/index.html
+++ b/index.html
@@ -7759,3 +7759,5 @@
 <!-- Better SEO optimization -->
 
 <!-- Better SEO optimization -->
+
+<meta name="description" content="Updated description">
