--- a/index.html
+++ b/index.html
@@ -7763,3 +7763,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Enhanced user experience -->
+
+<link rel="stylesheet" href="styles.css">
