--- a/index.html
+++ b/index.html
@@ -7757,3 +7757,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Better SEO optimization -->
