--- a/index.html
+++ b/index.html
@@ -7775,3 +7775,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<link rel="stylesheet" href="styles.css">
