--- a/index.html
+++ b/index.html
@@ -7785,3 +7785,5 @@
 <!-- Improved accessibility -->
 
 <meta name="description" content="Updated description">
+
+<meta name="description" content="Updated description">
