--- a/index.html
+++ b/index.html
@@ -7787,3 +7787,5 @@
 <meta name="description" content="Updated description">
 
 <meta name="description" content="Updated description">
+
+<script src="app.js"></script>
