--- a/index.html
+++ b/index.html
@@ -7797,3 +7797,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
