--- a/index.html
+++ b/index.html
@@ -7805,3 +7805,5 @@
 <link rel="stylesheet" href="styles.css">
 
 <meta name="description" content="Updated description">
+
+<!-- Better SEO optimization -->
