--- a/index.html
+++ b/index.html
@@ -7803,3 +7803,5 @@
 <!-- Enhanced user experience -->
 
 <link rel="stylesheet" href="styles.css">
+
+<meta name="description" content="Updated description">
