--- a/index.html
+++ b/index.html
@@ -7807,3 +7807,5 @@
 <meta name="description" content="Updated description">
 
 <!-- Better SEO optimization -->
+
+<!-- Improved accessibility -->
