--- a/index.html
+++ b/index.html
@@ -1,31 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TPQNM8CC');</script>
-    <link rel="stylesheet" href="src/css/main.css">
-    <title>Mr Vi </0dev></title>
+    <title>Моя Стартовая Страница</title>
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-    <style>
-        body { 
-            background-color: #1e1e1e; /* Темный фон */
-            color: #fff;
-        }
-    </style>
-    <ul>
-        <li><a href="https://mrvi0.github.io/utilities/vkhost/index.html">VK Token Generator</a></li>
-        <li><a href="https://mrvi0.github.io/utilities/stream-qr/index.html">QR Code Generator</a></li>
-        <li><a href="https://mrvi0.github.io/utilities/stream-popup/index.html">Popup Generator</a></li>
-    </ul>
-    <div class="powered-by">
-        <p>Powered by <a href="https://twitch.tv/f_4_t_c_a_t" class="mr-vi" target="_blank">Mr Vi</a></p>
-    </div>
+    <!-- Контейнер для анимированного фона tsParticles -->
+    <div id="tsparticles"></div>
+
+    <main class="content">
+        <header class="header-animate">
+            <h1>Добро пожаловать!</h1>
+            <p>Это <span id="typed-element"></span></p>
+        </header>
+
+        <nav class="nav-animate">
+            <h2>Навигация:</h2>
+            <ul>
+                <li><a href="#">🚀 Утилиты</a></li>
+                <li><a href="#">📚 Персональная Вики</a></li>
+                <li><a href="#">📝 Заметки</a></li>
+                <li><a href="#">💡 Проекты</a></li>
+                <!-- Добавь сюда ссылки на твои разделы, когда они появятся -->
+                <!-- Пример: <li><a href="/utils/">🚀 Утилиты</a></li> -->
+            </ul>
+        </nav>
+
+        <footer class="footer-animate">
+            <p>© 2023 Твое Имя или Никнейм. Сделано с ❤️ и кодом.</p>
+            <p><a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank" rel="noopener noreferrer">Мой GitHub</a></p>
+             <!-- Замени YOUR_GITHUB_USERNAME на свой ник -->
+        </footer>
+    </main>
+
+    <!-- Подключение библиотек -->
+    <!-- tsParticles -->
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.10.1/tsparticles.bundle.min.js"></script>
+    <!-- Typed.js -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+    <!-- Скрипт инициализации -->
+    <script>
+        // --- tsParticles Initialization ---
+        tsParticles.load("tsparticles", {
+            // preset: "stars", // Можешь попробовать разные пресеты: "stars", "snow", "bubbles", "links" и т.д.
+             fullScreen: {
+                 enable: true,
+                 zIndex: -1 // Помещает фон за контентом
+             },
+            particles: {
+                number: { value: 80, density: { enable: true, value_area: 800 } },
+                color: { value: "#ffffff" }, // Цвет частиц
+                shape: { type: "circle" },
+                opacity: { value: 0.5, random: false, anim: { enable: false } },
+                size: { value: 3, random: true, anim: { enable: false } },
+                line_linked: { enable: true, distance: 150, color: "#ffffff", opacity: 0.4, width: 1 }, // Линии между частицами
+                move: {
+                    enable: true,
+                    speed: 2, // Скорость движения
+                    direction: "none",
+                    random: false,
+                    straight: false,
+                    out_mode: "out", // Поведение при выходе за пределы экрана
+                    bounce: false,
+                    attract: { enable: false }
+                }
+            },
+            interactivity: {
+                detect_on: "canvas",
+                events: {
+                    onhover: { enable: true, mode: "repulse" }, // Отталкивание при наведении мыши
+                    onclick: { enable: true, mode: "push" },    // Добавление частиц при клике
+                    resize: true
+                },
+                modes: {
+                    repulse: { distance: 100, duration: 0.4 },
+                    push: { particles_nb: 4 }
+                }
+            },
+            detectRetina: true
+        });
+
+        // --- Typed.js Initialization ---
+        const options = {
+          strings: [
+            'моя цифровая площадка.',
+            'место для утилит.',
+            'персональная вики.',
+            'пространство для идей!'
+            ],
+          typeSpeed: 50,  // Скорость печати
+          backSpeed: 25,   // Скорость стирания
+          backDelay: 1500, // Пауза перед стиранием
+          startDelay: 500, // Пауза перед началом
+          loop: true,      // Повторять анимацию
+          showCursor: true, // Показывать курсор
+          cursorChar: '|',  // Символ курсора
+        };
+
+        const typed = new Typed('#typed-element', options);
+
+    </script>
 </body>
 </html>
